# esquenta-esp32-iot-ava

./: CMakeLists.txt  README.md  sdkconfig
device_drivers/button/inc/: button.h
device_drivers/button/src/: button.c
device_drivers/dht/inc/: dht.h
device_drivers/dht/src/: dht.c
device_drivers/goniometer/inc/: goniometer.h
device_drivers/goniometer/src/: goniometer.c
main/: CMakeLists.txt
main/inc/: main.h
main/src/: main.c
platform_drivers/mqtt/inc/: mqtt.h
platform_drivers/mqtt/src/: mqtt.c
platform_drivers/system/inc/: system.h
platform_drivers/system/src/: system.c
platform_drivers/wifi/inc/: wifi.h
platform_drivers/wifi/src/: wifi.c
