idf_component_register(SRCS
"src/main.c"
"../platform_drivers/system/src/system.c"
"../platform_drivers/wifi/src/wifi.c"
"../platform_drivers/mqtt/src/mqtt.c"
"../device_drivers/dht/src/dht.c"
"../device_drivers/goniometer/src/goniometer.c"
"../device_drivers/button/src/button.c"
INCLUDE_DIRS
"."
"inc"
"../platform_drivers/system/inc"
"../platform_drivers/wifi/inc"
"../platform_drivers/mqtt/inc"
"../device_drivers/dht/inc"
"../device_drivers/goniometer/inc"
"../device_drivers/button/inc"
)